# deprem-ocr

./: Dockerfile  LICENSE  MANIFEST.in  README.md  detector.py  inference.py  main.py  requirements.txt  setup.cfg  setup.py  utility.py
postprocess/: cls_postprocess.py  db_postprocess.py  fce_postprocess.py  sast_postprocess.py  vqa_token_ser_layoutlm_postprocess.py
postprocess/pse_postprocess/: __init__.py
ppocr/data/: lmdb_dataset.py  pgnet_dataset.py  simple_dataset.py
ppocr/data/imaug/: __init__.py  copy_paste.py  gen_table_mask.py  make_shrink_map.py  operators.py  randaugment.py  rec_img_aug.py  ssl_img_aug.py
ppocr/data/imaug/text_image_aug/: augment.py
ppocr/data/imaug/vqa/token/: vqa_token_relation.py
src/deprem_ocr/: ocr.py  recognizer.py  utility.py
src/deprem_ocr/postprocess/: __init__.py  east_postprocess.py  extract_textpoint_fast.py  extract_textpoint_slow.py  pg_postprocess.py  rec_postprocess.py  vqa_token_re_layoutlm_postprocess.py
src/deprem_ocr/postprocess/pse_postprocess/: pse_postprocess.py
src/deprem_ocr/postprocess/pse_postprocess/pse/: __init__.py
src/deprem_ocr/ppocr/data/: __init__.py  collate_fn.py  pubtab_dataset.py
src/deprem_ocr/ppocr/data/imaug/: ColorJitter.py  east_process.py  fce_aug.py  fce_targets.py  iaa_augment.py  label_ops.py  make_border_map.py  make_pse_gt.py  pg_process.py  random_crop_data.py  sast_process.py
src/deprem_ocr/ppocr/data/imaug/text_image_aug/: warp_mls.py
src/deprem_ocr/ppocr/data/imaug/vqa/: __init__.py
src/deprem_ocr/ppocr/data/imaug/vqa/token/: __init__.py  vqa_token_chunk.py  (+1 more)
