[metadata]
name = deprem_ocr
version = 1.0.9
author = Kutsal Ozkurt
author_email = kutsal_baran@hotmail.com
description = Extract texts from images and screenshots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Goodsea/deprem-ocr
project_urls =
    Bug Tracker = https://github.com/Goodsea/deprem-ocr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src